...
    },
    {
      'nombre': 'Rediseño proceso ventas',
      'cliente': 'Cliente A',
      'tareas': 8,
      'completadas': 8,
      'estado': 'Completado',
      'fecha': '10/04/2026',
      'color': Colors.green,
    },
    {
      'nombre': 'Onboarding cliente C',
      'cliente': 'Cliente C',
...
          BottomNavigationBarItem(icon: Icon(Icons.home), label: 'Inicio'),
          BottomNavigationBarItem(icon: Icon(Icons.task), label: 'Tareas'),
          BottomNavigationBarItem(
            icon: Icon(Icons.account_tree),
            label: 'Procesos',
          ),
          BottomNavigationBarItem(icon: Icon(Icons.person), label: 'Perfil'),
        ],
      ),
    );
  }
}

...
